web-ui/app/scss/styles.scss
@import "compass/css3";
@import "colors.scss";
@import "mixins.scss";
@import "alerts.scss";
@import "read.scss";
@import "reply.scss";
@import "compose.scss";
@import "security.scss";


#logo {
  color: #FFF;
}

#logout {
  color: #FFF;
}

.search-highlight {
  background-color: $search-highlight;
}


@mixin list-actions {
  #list-actions {
    width: 100%;
    height: 34px;
    margin: 0;
    border-top: 1px solid #FFF;
    border-bottom: 2px solid lighten($top_pane, 30%);
    background: $top_pane;
    clear: both;
    overflow: hidden;
    z-index: 1;
    li {
      display: inline-block;
      margin: 1px -3px;
      vertical-align: top;
      input[type=checkbox] {
        @include check-box;
        margin: 7px 8px;
      }
      select {
        padding: 1px 3px;
        margin: 0;
      }
      input[type=button] {
        margin: 2px;
        padding: 4px 10px;
        background: lighten($contrast, 70%);
        color: #333;
        text-transform: uppercase;
        font-weight: 400;
        font-size: 0.8em;
        opacity: 0.7;
        border: 1px solid darken($contrast, 10%);
        @include border-radius(1px);
        @include btn-transition;
        &:hover {
          opacity: 1;
        }
        &[disabled=disabled] {
          opacity: 0.5;
          cursor: default;
        }
      }
    }

    #pagination-trigger {
      cursor: pointer;
      margin: 4px 12px 0 5px;

      span {
        padding-left: 5px;
      }
    }
  }
}

@mixin email-list {
  ul#mail-list {
    clear: both;
    li {
      height: 75px;
      position: relative;
      padding: 12px 10px;
      background: $contrast;
      border-bottom: 1px solid white;
      cursor: pointer;
      font-weight: bold;
      transition: background-color 150ms ease-out;
      span {
        display: inline-block;
        vertical-align: top;
        &:last-child {
          width: 92%;
        }
        input[type=checkbox] {
          @include check-box;
          margin-right: 2px;
        }
        a {
          color: #333;
        }
      }
      .subject-and-tags {
        display: inline-block;
        width: 90%;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        @include tags;
        ul.tags {
          display: inline-block;
          li {
            display: inline-block;
            height: auto;
            font-weight: 400;
            border: none;
            &.tag:hover {
              text-decoration: none;
            }
          }
        }
      }

      .received-date, .sent-date {
        position: absolute;
        right: 10px;
        font-size: 0.7em;
      }
      .from {
        white-space: nowrap;
        font-size: 0.8em;
        width: 80%;
        overflow: hidden;
        text-overflow: ellipsis;
      }

      &.status-read {
        a {
          font-weight: normal;
          color: #555;
        }
      }
      &:hover {
        background: darken($contrast, 5%);
      }
      &.selected {
        background: #FFF;
        a {
          color: #333;
        }
      }
    }
  }
}

@mixin mail-count($bg_color) {
  background: $bg_color;
  color: #FFF;
  padding: 2px 5px;
  font-size: 0.7em;
  margin-left: 5px;
  font-weight: 700;
  @include border-radius(100px);
}

article {
  padding-left: 50px !important;
}
/* ... */

